# deno_lz4

./: Cargo.toml  LICENSE  README.md  deno.jsonc  mod.ts  mod_polyfill.ts  mod_runtime_agnostic.ts  test.ts
scripts/: build.ts
wasm/: lib.rs  mod.ts
